--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('src/assets/background.jpg');
+    background-image: url('/background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
